# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

# LLVM is only used to provide libclang.so (and the matching C++ include
# filegroups) for the score_tooling C++ parser used by score_communication's
# code generation (lola_skeleton/lola_proxy/component targets). The LLVM C++
# compiler toolchain is intentionally NOT registered here; C++ compilation
# keeps using the GCC/QNX toolchains and libclang is wired up via the dedicated
# libclang toolchain in //bazel/toolchains.
bazel_dep(name = "toolchains_llvm", version = "1.8.0")

llvm = use_extension(
    "@toolchains_llvm//toolchain/extensions:llvm.bzl",
    "llvm",
)
llvm.toolchain(
    llvm_version = "19.1.7",
)
use_repo(llvm, "llvm_toolchain_llvm")
