# *******************************************************************************
# Copyright (c) 2025 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0 
# *******************************************************************************

"EB corbos Linux for Safety Applications - S-CORE Reference Integration"

module(
    name = "reference_integration_ebclfsa",
    version = "0.1.0",
    compatibility_level = 0,
)

bazel_dep(name = "rules_cc", version = "0.2.1")

bazel_dep(name = "score_toolchains_gcc", dev_dependency=True)
git_override( # Elektrobit corbos Linux for Safety Applications needs a specific toolchain
   module_name = "score_toolchains_gcc",
   remote = "https://github.com/elektrobit-contrib/eclipse-score_toolchains_gcc.git",
   tag = "0.5.0-beta" # corresponds to git sha 158921ffd9aabef41a2a03bca5baeaa9f4aa9d33
)
gcc = use_extension("@score_toolchains_gcc//extensions:gcc.bzl", "gcc", dev_dependency=True)
gcc.toolchain(
    url = "https://github.com/elektrobit-contrib/eclipse-score_toolchains_gcc/releases/download/0.5.0-beta/fastdev-sdk-ubuntu-ebclfsa-ebcl-qemuarm64.tar.gz",
    sha256 = "05b57bbc8d99d46df6b57f774c39a5a2664964ea7eb94147cbece08508c1f121",
    strip_prefix = "fastdev-sdk-ubuntu-ebclfsa-ebcl-qemuarm64",
)
use_repo(gcc, "gcc_toolchain", "gcc_toolchain_gcc")

bazel_dep(name = "score_docs_as_code", version = "2.0.1") # part of 0.5.0-alpha release
single_version_override(
    module_name = "score_docs_as_code",
    version = "2.0.1",
)

bazel_dep(name = "score_baselibs")
single_version_override(
    module_name = "score_baselibs",
    version = "0.1.3", # part of 0.5.0-alpha release
    patch_strip = 1,
    patches = [
        "//patches:fix_hard_coded_amd64.patch",
    ],
)
bazel_dep(name = "score_communication", version = "0.1.1") # part of 0.5.0-alpha release
bazel_dep(name = "score_scrample", version = "0.1.0") # part of 0.5.0-alpha release
bazel_dep(name = "score_persistency", version = "0.2.1") # part of 0.5.0-alpha release

# git_override is not forwarded by bazel_dep, so we need to redefine it here
git_override(
    module_name = "trlc",
    remote = "https://github.com/bmw-software-engineering/trlc.git",
    commit = "650b51a47264a4f232b3341f473527710fc32669",  # trlc-2.0.2 release
)

# archive_override is not forwarded by bazel_dep, so we need to redefine it here
archive_override(
    module_name = "rules_boost",
    urls = ["https://github.com/nelhage/rules_boost/archive/refs/heads/master.tar.gz"],
    strip_prefix = "rules_boost-master",
)
