bazel_dep(name = "score_baselibs", version = "0.1.3")
git_override(
    module_name = "score_baselibs",
    remote = "https://github.com/eclipse-score/baselibs.git",
    commit = "ffd1c812213c66a436ed982632f6942528b58be8",
)

bazel_dep(name = "score_communication", version = "0.1.1",) # EB needs 0.1.2 but others does not work with it
# git_override(
#     module_name = "score_communication",
#     remote = "https://github.com/eclipse-score/communication.git",
#     commit = "0c0ea032995eaa766f5bdcec031bc02ee10d4587",  # does not work due to nested dependencies logging -> docs
# )

bazel_dep(name = "score_persistency", version = "0.2.1")
git_override(
    module_name = "score_persistency",
    remote = "https://github.com/eclipse-score/persistency.git",
    commit = "9c1f0c1b1cd9b49621ecf4f9d541ded100fe2c08",
)

bazel_dep(name = "score_orchestrator")
git_override(
    module_name = "score_orchestrator",
    remote = "https://github.com/eclipse-score/orchestrator.git",
    commit = "6702f8c4bcabcc8802e62f07cccfd862991b1f8e",
)

bazel_dep(name = "score_kyron")
git_override(
    module_name = "score_kyron",
    remote = "https://github.com/eclipse-score/kyron.git",
    commit = "1da4672285a35d8e8a76c929b26531ea5e98fb96",
)
