bazel_dep(name = "score_baselibs")
git_override(
    module_name = "score_baselibs",
    remote = "https://github.com/eclipse-score/baselibs.git",
    commit = "ffd1c812213c66a436ed982632f6942528b58be8",
    patch_strip = 1,
    patches = [
        "//patches/baselibs:0001-fixes-for-aarch64.patch",
    ],
)

bazel_dep(name = "score_communication", version = "0.1.1",) # EB needs 0.1.2 but others does not work with it
bazel_dep(name = "score_persistency")
git_override(
    module_name = "score_persistency",
    remote = "https://github.com/eclipse-score/persistency.git",
    commit = "4497cbbb3beb3af9a3ff9438959c82f754fe54db",
)
bazel_dep(name = "score_scrample", version = "0.1.0")
git_override(
    module_name = "score_scrample",
    remote = "https://github.com/eclipse-score/scrample.git",
    commit = "b49dc7cd50612322e2619f2d55fe13e67d2d93b8",
)

bazel_dep(name = "score_itf", version = "0.1.0")

bazel_dep(name = "score_orchestrator")
git_override(
    module_name = "score_orchestrator",
    remote = "https://github.com/eclipse-score/orchestrator.git",
    commit = "6702f8c4bcabcc8802e62f07cccfd862991b1f8e",
)

bazel_dep(name = "score_kyron")
git_override(
    module_name = "score_kyron",
    remote = "https://github.com/eclipse-score/kyron.git",
    commit = "1da4672285a35d8e8a76c929b26531ea5e98fb96",
)

bazel_dep(name = "score_lifecycle_health")
git_override(
    module_name = "score_lifecycle_health",
    commit = "e67583b33bae79677b3c70aa79adfc4b6820fc87",
    remote = "https://github.com/eclipse-score/lifecycle.git",
)

bazel_dep(name = "score_baselibs_rust", version = "0.1.0")
